# gitoxide

./: .gitignore  Cargo.toml
gix-protocol/src/: command.rs  lib.rs
gix-receive-pack/: Cargo.toml  INTERFACES.md  ROADMAP.md  SPEC.md
gix-receive-pack/src/: connectivity.rs  error.rs  interrupt.rs  lib.rs  shallow.rs
gix-receive-pack/src/config/: hooks.rs  mod.rs  policy.rs  proc_receive.rs
gix-receive-pack/src/hooks/: env.rs  external.rs  mod.rs  noop.rs
gix-receive-pack/src/pack/: fsck.rs  mod.rs  quarantine.rs  streaming.rs
gix-receive-pack/src/policy/: ff.rs  mod.rs  set.rs
gix-receive-pack/src/progress/: mod.rs
gix-receive-pack/src/protocol/: advertise.rs  capabilities.rs  commands.rs  config_integration.rs  mod.rs  options.rs
gix-receive-pack/tests/: engine_integration.rs  fallback_scenarios.rs  feature_gate_matrix.rs  golden_advertisement.rs  head_info_fixtures.rs  interrupt_integration.rs  streaming_performance.rs
gix-receive-pack/tests/fixtures/: advertisement-empty-repo.sh  advertisement-multiple-refs.sh  advertisement-single-ref.sh  generate-golden-fixtures.sh  head-info-empty-create.sh  head-info-push-options-and-shallow.sh  head-info-update-delete.sh  invalid-pack.data  pack-contents.txt  pack-ingestion-test.sh  test-pack.idx  test-pack.pack  test-pack.rev
gix-receive-pack/tests/fixtures/generated-archives/: advertisement-empty-repo.tar  advertisement-multiple-refs.tar  advertisement-single-ref.tar  head-info-empty-create.tar  head-info-push-options-and-shallow.tar  head-info-update-delete.tar
gix-serve-core/: Cargo.toml
gix-serve-core/src/: advertise.rs  capabilities.rs  io_async.rs  io_blocking.rs  lib.rs  pktline.rs  progress.rs  protocol.rs  service.rs  visibility.rs
gix-serve-core/tests/: pktline.rs  visibility.rs
gix-upload-pack/: Cargo.toml  clippy.toml
gix-upload-pack/examples/: simple_server.rs
gix-upload-pack/src/: error.rs  lib.rs  main.rs  server_simple.rs  types.rs
gix-upload-pack/src/config/: mod.rs
gix-upload-pack/src/protocol/: mod.rs  v1.rs  v2.rs
gix-upload-pack/src/server/: capabilities.rs  handshake.rs  mod.rs  negotiation.rs  pack_generation.rs  protocol_detection.rs  response.rs
gix-upload-pack/src/services/: capabilities.rs  command_parser.rs  mod.rs  packet_io.rs  references.rs
gix-upload-pack/src/services/pack/: generation.rs  mod.rs  progress.rs
gix-upload-pack/tests/: compatibility.rs
gix-upload-pack/tests/fixtures/: fetch.tcp  v1.pkt  v2-ls-refs.tcp
