lints.workspace = true

[package]
name = "gix-serve-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared server-side protocol primitives for gitoxide services"
repository = "https://github.com/GitoxideLabs/gitoxide"
rust-version = "1.74"

[features]
default = ["blocking-io"]
# Use gix-packetline-blocking for blocking I/O; do not combine with async-io.
blocking-io = ["dep:gix-packetline-blocking"]
# Use gix-packetline for async I/O; do not combine with blocking-io.
async-io = ["dep:gix-packetline", "dep:futures-io"]
# Placeholder for future bridging to progress sinks
progress = []
# Optional serde derives if needed later
serde = ["dep:serde"]

[dependencies]
gix = { path = "../gix", default-features = false }
gix-hash = { path = "../gix-hash", default-features = false }

# Wire-format dependencies
gix-packetline-blocking = { path = "../gix-packetline-blocking", optional = true, default-features = false, features = ["blocking-io"] }
gix-packetline = { path = "../gix-packetline", optional = true, default-features = false, features = ["async-io"] }

futures-io = { version = "0.3", optional = true }
thiserror = "1"
serde = { version = "1.0", features = ["derive"], optional = true, default-features = true }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
features = ["document-features", "blocking-io", "serde"]


