[package]
name = "gix-upload-pack"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "Git upload-pack server implementation for gitoxide"
repository = "https://github.com/GitoxideLabs/gitoxide"
keywords = ["git", "server", "upload-pack", "protocol"]
categories = ["development-tools", "network-programming"]

[[bin]]
name = "gix-upload-pack"
path = "src/main.rs"

[[example]]
name = "simple_server"
path = "examples/simple_server.rs"

[dependencies]
# Core gitoxide crates
gix = { version = "0.73", path = "../gix", default-features = false, features = ["revision"] }
gix-protocol = { version = "0.51", path = "../gix-protocol", features = ["handshake", "fetch"] }
gix-transport = { version = "0.48.0", path = "../gix-transport", features = ["blocking-client"] }
gix-pack = { version = "0.60.0", path = "../gix-pack", features = ["streaming-input"] }
gix-packetline = { version = "0.19.1", path = "../gix-packetline" }
gix-packetline-blocking = { version = "0.19.1", path = "../gix-packetline-blocking" }
gix-hash = { version = "0.19.0", path = "../gix-hash" }
gix-object = { version = "0.50.0", path = "../gix-object" }
gix-ref = { version = "0.53.0", path = "../gix-ref" }
gix-odb = { version = "0.70.0", path = "../gix-odb" }
gix-features = { version = "0.43.0", path = "../gix-features", features = ["progress", "parallel"] }
gix-date = { version = "0.10.3", path = "../gix-date" }
gix-pathspec = { version = "0.12.0", path = "../gix-pathspec" }
gix-actor = { version = "0.35.2", path = "../gix-actor" }
gix-traverse = { version = "0.47.0", path = "../gix-traverse" }
gix-revision = { version = "0.35.0", path = "../gix-revision" }
gix-filter = { version = "0.20.0", path = "../gix-filter" }

# External dependencies  
thiserror = "1.0"
bstr = { version = "1.6", default-features = false, features = ["std"] }
smallvec = "1.11"

# Optional async support
futures-lite = { version = "2.0", optional = true }
async-trait = { version = "0.1", optional = true }

# Tracing and logging
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"

[features]
default = ["blocking"]

# Transport features
blocking = ["gix-transport/blocking-client"]
async = ["gix-transport/async-client", "futures-lite", "async-trait"]

# Protocol features  
serde = ["gix-protocol/serde", "gix-transport/serde"]

# Instrumentation
tracing = ["dep:tracing", "gix/tracing"]

# Performance features
parallel = ["gix-features/parallel"]
